qr-code-component-main/styles.css
body{
    background-color: hsl(212, 45%, 89%);
}

.card{
    width: 20em;
    max-width: 1440px;
    border-radius: 15px;
    background-color: hsl(0, 0%, 100%);
    padding: 1em 0;
    margin: 10em auto 0 auto;
}

.card img{
    width: 90%;
    display: flex;
    margin: auto;
    border-radius: 10px;
}

.card h1{
    font-family: 'Outfit', sans-serif;
    font-weight: 700;
    text-align: center;
    font-size: 20px;
    margin: .5em;
    padding: 0 1em;
    color: hsl(218, 44%, 22%);
}

.card p{
    font-family: 'Outfit';
    font-weight: 400;
    color: hsl(216, 15%, 48%);
    text-align: center;
    font-size: 15px;
    margin: 1em;
    padding: 0 1em;
}

.attribution{
    margin-top: 2em;
}

